--- a/src/App.scss
+++ b/src/App.scss
@@ -5,9 +5,16 @@
   margin: 0;
   padding: 0;
   font-family: 'Quicksand', sans-serif;
+  color: #f3f3f3;
 }
 
 body{
-  background-color: #000;
-  // color: #f3f3f3;
+  color: #f3f3f3;
+  height: 100%;
+}
+
+section{
+  padding: 80px 0px;
+  height: 100vh;
+  width: 100%;
 }
