--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -1,3 +1,63 @@
 .works{
-    background-color: grey;
+    background-color: #333;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .worksTitle{
+        font-size: 3rem;
+        font-weight: lighter;
+        padding-bottom: 60px;
+    }
+    .worksContainer{
+        width: 80%;
+        height: auto;
+        .swiper-slide-active{
+            filter: brightness(120%);
+        }
+    
+        .swiper-slide-active:hover img,
+        .cardBody{
+            filter: blur(4px);
+            transition: 1s;
+            transform: scale(.98) translateY(2px);
+        }
+        .swiper-slide-visible:hover a{
+            background-color: rgb(0, 0, 0);
+            opacity: 1;
+        }
+        .worksCard{
+            border: none;
+            background-color: #555;
+            text-decoration: none;
+            text-align: center;
+            font-size: 1.5rem;
+            filter: brightness(80%) drop-shadow(0px 3px 5px rgba(0, 0, 0, 0.564));
+            &:hover{
+                .cardCaption{
+                    opacity: 1;
+                    bottom: 0;
+                    transition: .5s;
+                }
+            }
+        }
+        .cardCaption{
+            opacity: 0;
+            background-color: rgba(0, 0, 0, 0.7);
+            width: 100%;
+            height: 100%;
+            padding: 10% 10%;
+            position: absolute;
+            bottom: -200px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            ul{
+                padding: 0;
+                li{
+                list-style: none;
+                }
+            }
+        }
+    }
 }
