--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -13,11 +13,12 @@
         color: rgb(107, 107, 107);
     }
     .angle1{
-        animation: angle1 1500ms forwards;
+        opacity: 0;
+        // animation: angle1 1500ms forwards;
     }
     .angle2{
         opacity: 0;
-        animation: angle2 1500ms forwards;
+        // animation: angle2 1500ms forwards;
     }
     .slash{
         font-size: 50vh;
@@ -30,7 +31,7 @@
         text-shadow: 10px 0px 10px#000;
         margin-right: 2rem;
         opacity: 0;
-        animation: slash 1500ms forwards;
+        // animation: slash 1500ms forwards;
     }
     .profile{
         width: 40%;
@@ -44,7 +45,7 @@
             width: 70%;
             rotate: -5deg;
             filter: drop-shadow(-5px -5px 30px rgba(255, 255, 255, 0.286));
-            animation: profileImage 1500ms ease forwards;
+            // animation: profileImage 1500ms ease forwards;
             position: absolute;
         }
 
@@ -63,7 +64,7 @@
                 font-size: 1.8rem;   
                 font-weight: normal; 
                 opacity: 0;
-                animation: profileImage 1500ms ease forwards;
+                // animation: profileImage 1500ms ease forwards;
             }
         }    
         .signature{
@@ -78,17 +79,24 @@
         25%{ 
             position: absolute;
             left: 50%;
+            opacity: 1;
         }
         50%{
             position: absolute;
             left: 40%;
+            opacity: 1;
+
         }
         75%{
             left: 30%;
+            opacity: 1;
+
         }
         100%{
             position: absolute;
-            left: 5%
+            left: 5%;
+            opacity: 1;
+
         }
     }
 
