--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -17,7 +17,7 @@
         }
     
         .swiper-slide-active:hover img,
-        .cardBody{
+        .swiper-slide-active:hover .card-body{
             filter: blur(4px);
             transition: 1s;
             transform: scale(.98) translateY(2px);
