--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -6,23 +6,42 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    .heroTitle{
-        font-size: 2rem;
-        font-style: italic;
-        margin-bottom: 0;
+    .welcome{
+        position: relative;
+        .heroTitle{
+            font-size: 2rem;
+            font-style: italic;
+            margin-bottom: 0;
+            animation: welcome 4s forwards;
+            position: relative;
+        }
+        .closeBtn{
+            color: white;
+            background-color: red;
+            width: 2rem;
+            text-align: center;
+            position: absolute;
+            top: 0;
+            right: 0;
+            animation: btn 2s step-end forwards;
+            height: 29px;
+        }
     }
+    
     .heroName{
         font-size: 7rem;
         font-weight: bold;
         text-shadow: 8px 8px 10px black;
         float: left;
 
+        opacity: 0;
         width: 7.5ch;
         white-space: nowrap;
         overflow: hidden;
         border-right: 3px solid transparent;
-        animation: typing 2s steps(17) alternate,
+        animation: typing 2s steps(17) alternate forwards,
             blink 0.4s step-end alternate;
+        animation-delay: 4s;
     }
     .heroSubtitle{
         font-size: 3rem;
@@ -35,8 +54,24 @@
         border-right: 3px solid transparent;
         animation: typing 2s steps(17) alternate forwards,
             blink 0.4s step-end infinite alternate;
-        animation-delay: 3s;
+        animation-delay: 7s;
         text-shadow: 0px 0px 3px black;
+    }
+
+    @keyframes btn {
+        40%{
+            background-color: grey;
+        }
+        50%{
+            background-color: red;
+        }
+        59%{
+            background-color: red;
+        }
+        60%{
+            opacity: 0;
+        }
+        100%{ opacity: 0;}    
     }
 
     @keyframes typing {
@@ -53,6 +88,31 @@
         50% {
             border-color: #eee;
         }
+    }
+
+    @keyframes welcome {
+        0% {
+            font-size: 10rem;
+            background-color: white;
+            border-top: 30px solid rgb(47, 47, 215);
+            padding: 20px;
+            color: black;    
+        }
+        30% {
+            font-size: 10rem;
+            background-color: white;
+            border-top: 30px solid rgb(47, 47, 215);
+            padding: 20px;
+            color: black;    
+        }
+        40% {
+            font-size: 10rem;
+        }
+        100% {
+            font-size: 2rem;
+        }
+
+
     }
 
     @media (max-width: 990px) {
