--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -14,11 +14,9 @@
     }
     .angle1{
         opacity: 0;
-        // animation: angle1 1500ms forwards;
     }
     .angle2{
         opacity: 0;
-        // animation: angle2 1500ms forwards;
     }
     .slash{
         font-size: 50vh;
@@ -31,7 +29,6 @@
         text-shadow: 10px 0px 10px#000;
         margin-right: 2rem;
         opacity: 0;
-        // animation: slash 1500ms forwards;
     }
     .profile{
         width: 40%;
@@ -45,7 +42,6 @@
             width: 70%;
             rotate: -5deg;
             filter: drop-shadow(-5px -5px 30px rgba(255, 255, 255, 0.286));
-            // animation: profileImage 1500ms ease forwards;
             position: absolute;
         }
 
@@ -56,7 +52,7 @@
         height: 100vh;
         padding-left: 20px;
         display: flex;
-        justify-content: end;
+        justify-content: center;
         flex-direction: column;
         .textGroup{
             width: 90%;
@@ -69,7 +65,6 @@
                 font-size: 1.5rem;   
                 font-weight: normal; 
                 opacity: 0;
-                // animation: profileImage 1500ms ease forwards;
             }
         }    
         .signature{
@@ -129,24 +124,20 @@
 
     @keyframes slash {
         0%{ 
-            // display: none;
             opacity: 0;
             position: absolute;
             left: 60%;
-            // margin-right: 0;
         }
         25%{ 
             opacity: 0;
             position: absolute;
             left: 60%;
-            // margin-right: 0;
         }
 
         50%{
             opacity: 1;
             position: absolute;
             left: 50%;
-            // margin-right: 20%;
         }
 
         75%{
