--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,3 +1,48 @@
 .contact{
-    background-color: rgb(194, 194, 194);
+    background: linear-gradient(rgba(0, 0, 0, 0.80), rgba(0, 0, 0, 0.70)), url(../../images/welcomeImg.jpg) center center no-repeat;
+    background-size: cover;
+    h2{
+        text-align: center;
+        font-size: 4rem;
+        font-weight: 400;
+        margin: 40px auto 20px;
+        // color: rgb(103, 102, 102);
+        color: #75f4b6;
+        // text-shadow: 1px 1px 1px rgb(255, 255, 255);
+    }
+    h3{
+        text-align: center;
+    }
+    .contactForm{
+        width: 50%;
+        height: 60%;
+        margin: 50px auto;
+        padding: 40px 30px;
+        background-color: rgba(103, 102, 102, 0.35);
+        justify-content: space-around;
+        align-items: center;
+        .formLeft{
+            width: 45%;
+            height: 100%;
+            .select{
+                option{
+                    color: inherit;
+                }
+            }
+        }
+        .formRight{
+            height: 100%;
+            .formText{
+                height: 70%;
+                textarea{
+                    height: 80%;
+                }
+            }
+            .submitBtn{
+                background-color: #37af75;
+                border-color: #2c895c;
+                width: 100%;
+            }
+        }
+    }
 }
