--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,63 +1,69 @@
-.hero{
-    background: linear-gradient(rgba(0, 0, 0, 0.80), rgba(0, 0, 0, 0.70)), url(../../images/welcomeImg.jpg) center center no-repeat ;
-    width: 100%;
-    height: 100vh;
+.heroSection{
+    background: linear-gradient(rgba(0, 0, 0, 0.80), rgba(0, 0, 0, 0.70)), url(../../images/welcomeImg.jpg) center center no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    .welcome{
-        position: relative;
-        .heroTitle{
-            font-size: 2rem;
-            font-style: italic;
-            margin-bottom: 0;
-            animation: welcome 4s forwards;
+        .welcome{
             position: relative;
+            .heroTitle{
+                font-size: 2rem;
+                font-style: italic;
+                margin-bottom: 0;
+                animation: welcome 7s forwards;
+                position: relative;
+            }
+            .closeBtn{
+                color: white;
+                background-color: red;
+                width: 2rem;
+                text-align: center;
+                position: absolute;
+                top: 0;
+                right: 0;
+                animation: btn 2s step-end forwards;
+                animation-delay: 1s;
+                height: 29px;
+            }
+            .mouseCursor{
+                font-size: 1.2rem;
+                position: absolute;
+                right: -350px;
+                top: 350px;
+                animation: cursor 2s forwards ;
+            }
         }
-        .closeBtn{
-            color: white;
-            background-color: red;
-            width: 2rem;
-            text-align: center;
-            position: absolute;
-            top: 0;
-            right: 0;
-            animation: btn 2s step-end forwards;
-            height: 29px;
+        .heroName{
+            font-size: 7rem;
+            font-weight: bold;
+            text-shadow: 8px 8px 10px black;
+            float: left;
+            opacity: 0;
+            width: 7.5ch;
+            white-space: nowrap;
+            overflow: hidden;
+            border-right: 3px solid transparent;
+            animation: typing 2s steps(17) alternate forwards,
+                blink 0.4s step-end alternate;
+            animation-delay: 5s;
         }
+        .heroSubtitle{
+            font-size: 3rem;
+            font-weight: 200;
+            position: relative;
+            opacity: 0;
+            width: 15ch;
+            white-space: nowrap;
+            overflow: hidden;
+            border-right: 3px solid transparent;
+            animation: typing 2s steps(17) alternate forwards,
+                blink 0.4s step-end infinite alternate;
+            animation-delay: 9s;
+            text-shadow: 0px 0px 3px black;
+
     }
     
-    .heroName{
-        font-size: 7rem;
-        font-weight: bold;
-        text-shadow: 8px 8px 10px black;
-        float: left;
-
-        opacity: 0;
-        width: 7.5ch;
-        white-space: nowrap;
-        overflow: hidden;
-        border-right: 3px solid transparent;
-        animation: typing 2s steps(17) alternate forwards,
-            blink 0.4s step-end alternate;
-        animation-delay: 4s;
-    }
-    .heroSubtitle{
-        font-size: 3rem;
-        font-weight: 200;
-        position: relative;
-        opacity: 0;
-        width: 15ch;
-        white-space: nowrap;
-        overflow: hidden;
-        border-right: 3px solid transparent;
-        animation: typing 2s steps(17) alternate forwards,
-            blink 0.4s step-end infinite alternate;
-        animation-delay: 7s;
-        text-shadow: 0px 0px 3px black;
-    }
-
     @keyframes btn {
         40%{
             background-color: grey;
@@ -74,6 +80,32 @@
         100%{ opacity: 0;}    
     }
 
+    @keyframes cursor {
+        40%{
+            top: 300;
+            right: -300;
+        }
+        50%{
+            top: 250;
+            right: -250;
+        }
+        59%{
+            top: 200;
+            right: 0;
+        }
+        60%{
+            top: 0;
+            right: 0;
+            // opacity: 0;
+        }
+        99%{
+            top: 0;
+            right: 0;
+            opacity: 1;
+        }
+        100%{ opacity: 0;}    
+    }
+ 
     @keyframes typing {
         from {
             width: 0;
@@ -107,6 +139,9 @@
         }
         40% {
             font-size: 6rem;
+        }
+        80% {
+            font-size: 2rem;
         }
         100% {
             font-size: 2rem;
