--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -6,9 +6,7 @@
         font-size: 4rem;
         font-weight: 400;
         margin: 40px auto 20px;
-        // color: rgb(103, 102, 102);
         color: #75f4b6;
-        // text-shadow: 1px 1px 1px rgb(255, 255, 255);
     }
     h3{
         text-align: center;
@@ -24,6 +22,9 @@
         .formLeft{
             width: 45%;
             height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
             .select{
                 option{
                     color: inherit;
