--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -1,5 +1,5 @@
 .works{
-    background-color: #333;
+    background-color: rgb(36, 36, 36);
     display: flex;
     flex-direction: column;
     align-items: center;
